Edit OrgRoles + Supported Paygrades (all layers)

--- a/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
+++ b/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
@@ -48,11 +48,11 @@
     <Compile Include="CommandHandlers\Authentication\CreateAccessToken_CH.cs" />
     <Compile Include="CommandHandlers\Authentication\ExpireAccessToken_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\CreateOrganization_CH.cs" />
+    <Compile Include="CommandHandlers\Organizations\UpdateOrgRole_CH.cs" />
     <Compile Include="CommandHandlers\People\CreateMemberRankHistory_CH.cs" />
     <Compile Include="CommandHandlers\People\DeleteMember_CH.cs" />
     <Compile Include="CommandHandlers\People\UpdateMember_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\CreateOrgRole_CH.cs" />
-    <Compile Include="CommandHandlers\People\AddOrgRolesToPayGrade_CH.cs" />
     <Compile Include="CommandHandlers\People\CreateRank_CH.cs" />
     <Compile Include="CommandHandlers\People\CreatePayGrade_CH.cs" />
     <Compile Include="CommandHandlers\People\CreateMember_CH.cs" />
@@ -60,6 +60,7 @@
     <Compile Include="QueryHandlers\Authentication\GetAccessTokenByValue_QH.cs" />
     <Compile Include="QueryHandlers\Authentication\GetLatestMemberAccessToken_QH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandlers\Organizations\UpdatePayGradesForOrgRole_CH.cs" />
     <Compile Include="QueryHandlers\Organizations\GetOrgRoleByID_QH.cs" />
     <Compile Include="QueryHandlers\People\GetMemberByAccessToken_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\ListRolesForOrganization_QH.cs" />
