--- a/vvarscNET/vvarscNET.Web.Client/vvarscNET.Web.Client.csproj
+++ b/vvarscNET/vvarscNET.Web.Client/vvarscNET.Web.Client.csproj
@@ -353,6 +353,7 @@
     <Content Include="Views\Shared\_Toastr.cshtml" />
     <Content Include="Views\Admin\OrgRoles.cshtml" />
     <Content Include="Views\Admin\EditOrgRole.cshtml" />
+    <Content Include="Views\Wiki\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
