more package updates - yay. Added all existing units to data setup, query handlers for GetUnitByID, ListUnits

--- a/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
+++ b/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
@@ -62,7 +62,9 @@
     <Compile Include="QueryHandlers\Authentication\GetLatestMemberAccessToken_QH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CommandHandlers\Organizations\UpdatePayGradesForOrgRole_CH.cs" />
+    <Compile Include="QueryHandlers\Organizations\GetUnitByID_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\GetOrgRoleByID_QH.cs" />
+    <Compile Include="QueryHandlers\Organizations\ListUnits_QH.cs" />
     <Compile Include="QueryHandlers\People\GetMemberByAccessToken_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\ListRolesForOrganization_QH.cs" />
     <Compile Include="QueryHandlers\People\ListPayGrades_QH.cs" />
