added remainder of existing fleet roles to DataSetup. Separated out files in DataSetup to keep them reasonable size

--- a/vvarscNET/vvarscNET.Test.Helpers/vvarscNET.Test.Helpers.csproj
+++ b/vvarscNET/vvarscNET.Test.Helpers/vvarscNET.Test.Helpers.csproj
@@ -70,6 +70,10 @@
   <ItemGroup>
     <Compile Include="Data\InitializeCoreTestDB.cs" />
     <Compile Include="Data\SetupData.cs" />
+    <Compile Include="Data\SetupData\OrgRoles.cs" />
+    <Compile Include="Data\SetupData\PayGrades.cs" />
+    <Compile Include="Data\SetupData\Ranks.cs" />
+    <Compile Include="Data\SetupData\Units.cs" />
     <Compile Include="Data\TestDB.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Program.cs" />
