removed test controller, separated unit API methods into their own controller

--- a/vvarscNET/vvarscNET.Web.API/vvarscNET.Web.API.csproj
+++ b/vvarscNET/vvarscNET.Web.API/vvarscNET.Web.API.csproj
@@ -213,6 +213,7 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\UnitsController.cs" />
     <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="Controllers\OrganizationsController.cs" />
     <Compile Include="Controllers\ServerDataController.cs" />
