--- a/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
+++ b/vvarscNET/vvarscNET.Model/vvarscNET.Model.csproj
@@ -52,8 +52,8 @@
     <Compile Include="Objects\Organizations\Unit.cs" />
     <Compile Include="Objects\People\Member.cs" />
     <Compile Include="Objects\Organizations\OrgRole.cs" />
-    <Compile Include="Objects\People\PayGrade.cs" />
-    <Compile Include="Objects\People\Rank.cs" />
+    <Compile Include="Objects\Organizations\PayGrade.cs" />
+    <Compile Include="Objects\Organizations\Rank.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestModels\Authentication\AuthenticateMemberRequestModel.cs" />
     <Compile Include="RequestModels\Authentication\LogoutMemberRequestModel.cs" />
@@ -62,7 +62,7 @@
     <Compile Include="ResponseModels\Authentication\CreateAccessToken_CRM.cs" />
     <Compile Include="ResponseModels\Authentication\GetAccessToken_QRM.cs" />
     <Compile Include="ResponseModels\Organizations\GetFullOrganization_QRM.cs" />
-    <Compile Include="ResponseModels\People\ListRanks_QRM.cs" />
+    <Compile Include="ResponseModels\Organizations\ListRanks_QRM.cs" />
     <Compile Include="Result\Result.cs" />
     <Compile Include="Security\AccessToken.cs" />
     <Compile Include="Security\JwtApiToken.cs" />
