--- a/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
+++ b/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
@@ -80,8 +80,8 @@
     <Compile Include="CommandModels\People\UpdateMember_C.cs" />
     <Compile Include="CommandModels\People\CreateMember_C.cs" />
     <Compile Include="CommandModels\Organizations\CreateOrgRole_C.cs" />
-    <Compile Include="CommandModels\People\CreateRank_C.cs" />
-    <Compile Include="CommandModels\People\CreatePayGrade_C.cs" />
+    <Compile Include="CommandModels\Organizations\CreateRank_C.cs" />
+    <Compile Include="CommandModels\Organizations\CreatePayGrade_C.cs" />
     <Compile Include="Decorators\ValidateAccessTokenPre_QH_Decorator.cs" />
     <Compile Include="Decorators\ValidateUserContextPre_CH_Decorator.cs" />
     <Compile Include="Dispatchers\CommandDispatcher.cs" />
@@ -113,8 +113,8 @@
     <Compile Include="QueryModels\People\GetMemberByAccessToken_Q.cs" />
     <Compile Include="QueryModels\People\GetMemberByID_Q.cs" />
     <Compile Include="QueryModels\Organizations\GetOrganizationBySpectrumID_Q.cs" />
-    <Compile Include="QueryModels\People\ListPayGrades_Q.cs" />
-    <Compile Include="QueryModels\People\ListRanks_Q.cs" />
+    <Compile Include="QueryModels\Organizations\ListPayGrades_Q.cs" />
+    <Compile Include="QueryModels\Organizations\ListRanks_Q.cs" />
     <Compile Include="QueryModels\People\ListMembers_Q.cs" />
     <Compile Include="UserContext.cs" />
     <Compile Include="Logger\ApiLogEntry.cs" />
