updated OrgRole to have list of supported Ranks instead of Paygrades - unloaded WebClient Project

--- a/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
+++ b/vvarscNET/vvarscNET.Core.Data/vvarscNET.Core.Data.csproj
@@ -49,12 +49,13 @@
     <Compile Include="CommandHandlers\Organizations\CreateOrganization_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\AddOrgRoleToUnit_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\RemoveOrgRoleFromUnit_CH.cs" />
+    <Compile Include="CommandHandlers\Organizations\UpdateRanksForUnitOrgRole_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\UpdateUnit_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\DeleteUnitRecursive_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\DeleteUnit_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\CreateUnit_CH.cs" />
     <Compile Include="CommandHandlers\Organizations\UpdateOrgRole_CH.cs" />
-    <Compile Include="CommandHandlers\Organizations\InitPayGradesForOrgRole_CH.cs" />
+    <Compile Include="CommandHandlers\Organizations\InitRanksForOrgRole_CH.cs" />
     <Compile Include="CommandHandlers\People\CreateMemberRankHistory_CH.cs" />
     <Compile Include="CommandHandlers\People\DeleteMember_CH.cs" />
     <Compile Include="CommandHandlers\People\UpdateMember_CH.cs" />
@@ -66,12 +67,12 @@
     <Compile Include="QueryHandlers\Authentication\GetAccessTokenByValue_QH.cs" />
     <Compile Include="QueryHandlers\Authentication\GetLatestMemberAccessToken_QH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CommandHandlers\Organizations\UpdatePayGradesForOrgRole_CH.cs" />
+    <Compile Include="CommandHandlers\Organizations\UpdateRanksForOrgRole_CH.cs" />
     <Compile Include="QueryHandlers\Organizations\GetUnitByID_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\GetOrgRoleByID_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\ListUnits_QH.cs" />
     <Compile Include="QueryHandlers\People\GetMemberByAccessToken_QH.cs" />
-    <Compile Include="QueryHandlers\Organizations\ListRoles_QH.cs" />
+    <Compile Include="QueryHandlers\Organizations\ListOrgRoles_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\ListPayGrades_QH.cs" />
     <Compile Include="QueryHandlers\Organizations\ListRanks_QH.cs" />
     <Compile Include="QueryHandlers\People\ListMembers_QH.cs" />
