--- a/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
+++ b/vvarscNET/vvarscNET.Core/vvarscNET.Core.csproj
@@ -105,6 +105,7 @@
     <Compile Include="QueryModels\Authentication\AuthenticateMember_Q.cs" />
     <Compile Include="QueryModels\Authentication\GetAccessTokenByValue_Q.cs" />
     <Compile Include="QueryModels\Authentication\GetLatestMemberAccessToken_Q.cs" />
+    <Compile Include="QueryModels\Organizations\ListOrgRolesForUnit_Q.cs" />
     <Compile Include="QueryModels\Organizations\ListUnits_Q.cs" />
     <Compile Include="QueryModels\Organizations\GetUnitByID_Q.cs" />
     <Compile Include="QueryModels\Organizations\GetOrgRoleByID_Q.cs" />
